lots of jiggery-pokery to fix scrolling
I noticed that the bottom of the question nav bar was cut off on a
question in a diagnostic mode exam.

I've had another go at setting max-height on elements leading down to
the question content so that it has the right size and scrolls all the
way to the bottom.

I've checked in Firefox, Chrome and Safari. In Safari 17 there's still a
layout bug with the results screen - it seems too wide for the page.

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -206,7 +206,7 @@ img, object[type*="image"] {
         height: 100vh;
     }
     .question, #infoDisplay {
-        max-height: 100vh;
+        max-height: 100%;
     }
 }
 body.show-nav #everything {
@@ -238,12 +238,26 @@ body.navigate-menu.show-nav #everything > #topNav {
     display: flex;
 }
 
-#everything > main > #questionContainer,
-#everything > main > #infoDisplay {
-    max-width: 1170px;
-}
-#everything > main > #questionContainer {
-    padding-right: 0;
+@media screen {
+    #everything > main > #questionContainer,
+    #everything > main > #infoDisplay {
+        max-width: 1170px;
+        max-height: 100%;
+    }
+    #everything > main > #questionContainer {
+        padding-right: 0;
+        height: 100%;
+    }
+    #everything > main > #questionContainer > .contentArea {
+        display: grid;
+        height: 100%;
+    }
+    #everything > main > #questionContainer > .contentArea > #questionDisplay {
+        overflow: hidden;
+    }
+    #everything > main > #questionContainer > .contentArea > #questionDisplay > #question-wrapper {
+        height: 100%;
+    }
 }
 
 #navMenu-wrapper {
